--- a/djangoproject/gestion_stock/templates/lettrevoitureentreeadd.html
+++ b/djangoproject/gestion_stock/templates/lettrevoitureentreeadd.html
@@ -250,6 +250,7 @@
                 },
                 success: function(msg, data, settings){
                     console.log("success: " + msg);
+                    location.href = "{% url 'lvemodify' %}?id=" + msg;
                 },
                 failure: function() {
                     alert("fail");
