--- a/djangoproject/gestion_stock/templates/bonLivraisonEntree.html
+++ b/djangoproject/gestion_stock/templates/bonLivraisonEntree.html
@@ -116,6 +116,7 @@
                 },
                 success: function(msg, data, settings){
                     //alert("gg " + msg);
+                    window.location.reload();
                 },
                 failure: function() {
                     alert("fail");
