Tuto+, colis securité
toutes les entrées sont sécurisé sauf les colis dans les ume qui se dupliquent quand je fais en simultanée 10 enregistrement!

--- a/djangoproject/gestion_stock/templates/unitemanutentionentreeadd.html
+++ b/djangoproject/gestion_stock/templates/unitemanutentionentreeadd.html
@@ -426,7 +426,7 @@
                 },
                 success: function(msg, data, settings){
                     console.log("gg " + msg);
-                    window.location.href = "{% url 'unitemanutentionentreemodify' %}?id=" + $('#umid').val() + "&" + "name=" + null + "&" + "trueid=" + null;
+                    window.location.href = "{% url 'unitemanutentionentreemodify' %}?id=" + msg + "&" + "name=" + null + "&" + "trueid=" + null;
                 },
                 failure: function() {
                     console.log("fail");
