--- a/djangoproject/gestion_stock/templates/unitemanutentionentreemodify.html
+++ b/djangoproject/gestion_stock/templates/unitemanutentionentreemodify.html
@@ -222,7 +222,7 @@
                                     <td><input class='form-control text-center' disabled value='{{ items.fk_UniteManutentionSortie.dateExpedition }}'></td>
                                     <td><button class='btn btn-sm rounded-pill delieums'><i class="fa fa-unlink" style='font-size: 20px;cursor:pointer;color: red;'></i></button></td>
                                     <td><input class='form-control text-center' value='0'></td>
-                                    <td><button class="deleteur btn btn-sm rounded-pill" id="{{ items.idColis }}"> <i class="fa fa-trash" style='font-size: 24px;cursor:pointer;color: orangered;'></i> </button> </td>
+                                    <td><button class="deleteur btn btn-sm rounded-pill" id="{{ items.id }}"> <i class="fa fa-trash" style='font-size: 24px;cursor:pointer;color: orangered;'></i> </button> </td>
                                     {% if items.colle == "1" %}
                                     <td class='text-center'><i class="fa fa-leaf mt-2" style='font-size: 25px;cursor:pointer;color: green;'></i></td>
                                     {% endif %}
