--- a/djangoproject/gestion_stock/templates/create_type_fournisseur.html
+++ b/djangoproject/gestion_stock/templates/create_type_fournisseur.html
@@ -1,6 +1,7 @@
 {% extends user.is_authenticated|yesno:"base_generic.html,empty.html" %}
 
 {% block content %}
+<!-- Template create_typefour ou je montre les type de fournisseurs -->
 
 <div class="container"><h1 class="text-center"> Liste des types de fournisseurs</h1></div>
 <br>
