--- a/djangoproject/gestion_stock/templates/create_type_fournisseuradd.html
+++ b/djangoproject/gestion_stock/templates/create_type_fournisseuradd.html
@@ -23,7 +23,7 @@
             </div>
             <br>
             <br>
-            <form action="/create_typefour/" method="POST" id="post-form">
+            <form action="#" method="POST" id="post-form">
                 <br>
                 <div class="">
                     identifiant:<br><input class="text-center" type="text" id="umid" name="idtypefour" disabled>
