--- a/djangoproject/gestion_stock/templates/litigesmodify.html
+++ b/djangoproject/gestion_stock/templates/litigesmodify.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 
-<div class="container"><h1 class="text-center"> Ajout de Litiges</h1></div>
+<div class="container"><h1 class="text-center"> Modification des Litiges</h1></div>
 <br>
 
 <div class="container">
@@ -72,6 +72,7 @@
             }
         });
     });
+
     $("#back-row").click(function() {
         window.location.href = "{% url 'litiges' %}";
     });
