--- a/djangoproject/gestion_stock/templates/fournisseur.html
+++ b/djangoproject/gestion_stock/templates/fournisseur.html
@@ -114,6 +114,7 @@
           csrfmiddlewaretoken: '{{ csrf_token }}'
         },
         success: function(msg, data, settings){
+          location.reload();
           //alert("gg " + msg);
         },
         failure: function() {
