--- a/djangoproject/gestion_stock/templates/fournisseuradd.html
+++ b/djangoproject/gestion_stock/templates/fournisseuradd.html
@@ -108,6 +108,7 @@
                 },
                 success: function(msg, data, settings){
                     //alert("gg " + msg);
+                    location.reload();
                 },
                 failure: function() {
                     alert("fail");
