--- a/djangoproject/gestion_stock/templates/unitemanutentionentreemodify.html
+++ b/djangoproject/gestion_stock/templates/unitemanutentionentreemodify.html
@@ -812,6 +812,7 @@
                         myidx = 0;
                     }
                     //refreshit();
+                    window.location.href = "{% url 'unitemanutentionentreemodify' %}?id=" + $('#umid').val();
                 },
                 failure: function () {
                     alert("fail");
